@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false
skinparam groupInheritance 2

' ─────────────────────────────────────────
' CONCURRENCY
' ─────────────────────────────────────────
package "concurrency" {
    class Transaction {
        - txnID        : uint64
        - state        : TxnState    ' ACTIVE | COMMITTED | ABORTED
        - sharedLocks  : []Key
        - exclusiveLocks : []Key
        - undoLog      : []UndoEntry ' for rollback
        + GetID()      : uint64
        + AddUndo(entry UndoEntry)
    }

    class TransactionManager {
        - nextTxnID    : uint64
        + Begin()      : *Transaction
        + Commit(txn *Transaction) : error
        + Abort(txn *Transaction)  : error
        - rollbackChanges(txn *Transaction)
    }

    class LockManager {
        - lockTable    : map[Key]*LockQueue
        - mu           : sync.Mutex
        + LockShared(txn *Transaction, key []byte)    : error
        + LockExclusive(txn *Transaction, key []byte) : error
        + Unlock(txn *Transaction, key []byte)        : error
        - detectCycle() : bool   ' deadlock detection
    }

    TransactionManager ..> Transaction  : creates
    LockManager        o-- Transaction  : validates & blocks
}

' ─────────────────────────────────────────
' BTREE — access method & user view
' ─────────────────────────────────────────
package "btree (Access Method & User View)" {

    class BTree {
        - root         : PageID
        - order        : int
        - bufferPool   : *BufferPoolManager
        - lockManager  : *LockManager
        - wal          : *WALManager
        - meta         : *MetaPage
        + Find(txn *Transaction, key []byte)                : []byte
        + Insert(txn *Transaction, key []byte, value []byte)
        + Delete(txn *Transaction, key []byte)
        + RangeScan(txn *Transaction, lo, hi []byte)        : []KVPair
    }

    class InternalNode {
        - keys     : [][]byte
        - children : []PageID
        + splitNode()          : (PageID, []byte)
        + redistributeKeys(sibling *InternalNode)
    }

    class LeafNode {
        - keys     : [][]byte
        - values   : [][]byte
        - nextLeaf : PageID          ' linked list for range scans
        + split()              : (PageID, []byte)
        + merge(sibling *LeafNode)
    }

    class MetaPage {
        - rootPageID : PageID
        - height     : int
        - itemCount  : uint64
    }

    BTree "1" *-- "1"    MetaPage
    BTree      ..>        InternalNode : reads/writes via BPM
    BTree      ..>        LeafNode     : reads/writes via BPM
    InternalNode ..>      LeafNode     : points to
}

' ─────────────────────────────────────────
' WAL — write-ahead log
' ─────────────────────────────────────────
package "wal (Write-Ahead Log)" {

    class WALRecord {
        - lsn     : uint64
        - txnID   : uint64
        - type    : RecordType   ' UPDATE | COMMIT | ABORT | CHECKPOINT
        - pageID  : PageID
        - offset  : uint16
        - before  : []byte       ' undo image
        - after   : []byte       ' redo image
    }

    class WALManager {
        - logFile : *os.File
        - lsn     : uint64       ' monotonically increasing
        - mu      : sync.Mutex
        + AppendLog(rec WALRecord) : LSN
        + Flush(upToLSN uint64)    : error
        + Recover()                : error   ' ARIES-style redo then undo
        + Checkpoint()             : error
    }

    WALManager "1" *-- "many" WALRecord : appends
}

' ─────────────────────────────────────────
' BUFFER POOL — storage engine
' ─────────────────────────────────────────
package "bufferpool (Storage Engine)" {

    interface Replacer {
        + Victim()          : (FrameID, bool)
        + Pin(frameID FrameID)
        + Unpin(frameID FrameID)
        + Size()            : int
    }

    class LRUReplacer {
        - list : doublyLinkedList
        + Victim()          : (FrameID, bool)
        + Pin(frameID FrameID)
        + Unpin(frameID FrameID)
        + Size()            : int
    }

    class Page {
        - id       : PageID
        - data     : [PageSize]byte   ' e.g. 4 KiB
        - pinCount : int32
        - isDirty  : bool
        - pageLSN  : uint64           ' LSN of last write (for WAL)
        - rwMutex  : sync.RWMutex     ' physical latch
        + RLock()   / RUnlock()
        + WLock()   / WUnlock()
        + GetData() : []byte
    }

    class BufferPoolManager {
        - frames    : []*Page
        - pageTable : map[PageID]FrameID
        - freeList  : []FrameID
        - replacer  : Replacer
        - disk      : *DiskManager
        - walMgr    : *WALManager
        + FetchPage(pageID PageID)           : *Page
        + UnpinPage(pageID PageID, isDirty bool) : error
        + NewPage()                          : *Page
        + FlushPage(pageID PageID)           : error
        + FlushAll()                         : error
        - evict()                            : FrameID
    }

    class DiskManager {
        - dbFile    : *os.File
        - nextPage  : PageID
        - mu        : sync.Mutex
        + ReadPage(pageID PageID, pageData []byte)  : error
        + WritePage(pageID PageID, pageData []byte) : error
        + AllocatePage()                            : PageID
    }

    Replacer          <|..  LRUReplacer
    BufferPoolManager "1" *-- "1"    DiskManager
    BufferPoolManager "1" *-- "1"    Replacer
    BufferPoolManager "1" o-- "many" Page
}

' ─────────────────────────────────────────
' CLIENT
' ─────────────────────────────────────────
class Client <<actor>>

' ─────────────────────────────────────────
' CROSS-PACKAGE DATA FLOW
' ─────────────────────────────────────────
Client            -->  TransactionManager  : "1. Begin / Commit / Abort"
Client            -->  BTree               : "2. Find / Insert / Delete"

BTree             -->  LockManager         : "3. LockShared / LockExclusive (logical)"
BTree             -->  WALManager          : "4. AppendLog before each write (WAL)"
BTree             -->  BufferPoolManager   : "5. FetchPage / UnpinPage"
BTree             -->  Page                : "6. WLock / RLock (physical latch)"

WALManager        -->  DiskManager         : "7. Flush log to disk (durability)"
BufferPoolManager -->  WALManager          : "8. Check pageLSN before evicting dirty page"
@enduml